Fix spacing issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ html {
     display: flex;
     justify-content: space-between;
 
-    padding: 10px;
+    padding: 5px 20px;
 }
 
 .toolbar-sub a {
@@ -16,7 +16,11 @@ html {
     opacity: 0.87;
     text-decoration: none;
 
-    margin: 10px;
+    margin: 8px;
+}
+
+.toolbar-sub a:hover {
+    text-decoration: underline;
 }
 
 #toolbar-left, #toolbar-right {
@@ -25,7 +29,7 @@ html {
 }
 
 #toolbar-right img {
-    margin: 10px;
+    margin: 8px;
 }
 
 #toolbar-right #apps {
@@ -39,7 +43,7 @@ html {
 #logo {
     display: block;
 
-    margin: 55px auto 0px auto;
+    margin: 67px auto 0px auto;
     padding: 30px;
 }
 
@@ -68,9 +72,10 @@ html {
     height: 30px;
 
     border: none;
+    outline: none;
 
     position: relative;
-    top: 6px;
+    top: 5px;
 
     font-size: 16px;
 }
